# software_1

./: .gitignore  .gitmodules  CMakeLists.txt  SDL_shadercross.c  layout.txt  main.c  main3.c  notes.txt
quick_ref/: SDL3_quick_ref.txt  layout.txt  notes.txt  ui_needs.txt
src/: CMakeLists.txt  main.c
src/base/: base_context_crack.h  base_include.h  base_math.h  base_memory.c  base_memory.h  base_type.h  coc.md  htp_core.h  temp.txt
src/software_1/: CMakeLists.txt  main.c  main2.c  soft_core.h  soft_graphic.c  soft_graphic.h  soft_include.h
src/vendors/: CMakeLists.txt
